kubernetes/manifests/apps/pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.34.0
    heritage: Helm
    release: pihole
  name: pihole
  namespace: apps
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pihole
      release: pihole
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum.config.adlists: 25de9bcdaaba91a981cc4d6e9929c7ec78fb3f52da46e84577bbd95277dc175
        checksum.config.blacklist: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.dnsmasqConfig: 31496ff464b397d41e8bd13fd56d8196ab2b97982356497b8210240f66381e9
        checksum.config.regex: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.staticDhcpConfig: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.whitelist: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
      labels:
        app: pihole
        app.kubernetes.io/name: pihole
        release: pihole
    spec:
      containers:
        - env:
            - name: PIHOLE_HOSTNAME
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: PIHOLE_PORT
              value: '80'
            - name: PIHOLE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pihole-admin
          image: ekofr/pihole-exporter:v1.0.0
          imagePullPolicy: IfNotPresent
          name: exporter
          ports:
            - containerPort: 9617
              name: prometheus
              protocol: TCP
          resources:
            limits:
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - env:
            - name: FTLCONF_webserver_port
              value: '80'
            - name: VIRTUAL_HOST
              value: pihole.josevictor.me
            - name: FTLCONF_misc_etc_dnsmasq_d
              value: 'true'
            - name: FTLCONF_webserver_api_password
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pihole-admin
            - name: FTLCONF_dns_hosts
              value: '10.10.10.110 ceph.josevictor.me

                10.10.10.110 glance.josevictor.me

                10.10.10.110 grafana.josevictor.me

                10.10.10.110 libebooker.josevictor.me

                10.10.10.110 linkwarden.josevictor.me

                10.10.10.110 objectstore.josevictor.me

                10.10.10.110 pihole.josevictor.me'
            - name: FTLCONF_dns_listeningMode
              value: all
            - name: FTLCONF_dns_upstreams
              value: 1.1.1.1;1.0.0.1
          image: pihole/pihole:2025.07.0@sha256:da0216f6ee64c36dd9cae8576d3ec8c8f7436d6f5fb504a8f58bdda913647db5
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl --silent http://localhost/api/info/login | jq 'if (.dns | not)
                  then halt_error(1) end'
            failureThreshold: 10
            initialDelaySeconds: 60
            timeoutSeconds: 5
          name: pihole
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 53
              name: dns
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 67
              name: client-udp
              protocol: UDP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl --silent http://localhost/api/info/login | jq 'if (.dns | not)
                  then halt_error(1) end'
            failureThreshold: 10
            initialDelaySeconds: 60
            timeoutSeconds: 5
          resources: {}
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /etc/pihole
              name: config
            - mountPath: /etc/dnsmasq.d/02-custom.conf
              name: custom-dnsmasq
              subPath: 02-custom.conf
            - mountPath: /etc/addn-hosts
              name: custom-dnsmasq
              subPath: addn-hosts
            - mountPath: /etc/pihole/adlists.list
              name: adlists
              subPath: adlists.list
      dnsConfig:
        nameservers:
          - 127.0.0.1
          - 1.1.1.1
          - 8.8.8.8
      dnsPolicy: None
      hostNetwork: false
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pihole
        - configMap:
            defaultMode: 420
            name: pihole-custom-dnsmasq
          name: custom-dnsmasq
        - configMap:
            defaultMode: 420
            name: pihole-adlists
          name: adlists
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.100
    lbipam.cilium.io/sharing-key: pihole
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.34.0
    heritage: Helm
    release: pihole
  name: pihole-dns
  namespace: apps
spec:
  externalTrafficPolicy: Local
  ports:
    - name: dns
      port: 53
      protocol: TCP
      targetPort: dns
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
    - name: prometheus
      port: 9617
      protocol: TCP
      targetPort: prometheus
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.100
    lbipam.cilium.io/sharing-key: pihole
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.34.0
    heritage: Helm
    release: pihole
  name: pihole-web
  namespace: apps
spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app: pihole
    chart: pihole-2.34.0
    heritage: Helm
    release: pihole
  name: pihole
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: pihole.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: pihole-web
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pihole.josevictor.me
      secretName: wildcard-tls
